--- a/config/tr_config.yaml
+++ b/config/tr_config.yaml
@@ -28,7 +28,7 @@ training:
 # Logging
 logging:
   use_wandb: true
-  project_name: 'hybrid-ssm-transformer'
-  run_name: 'baseline-hybrid-v1'
-  output_dir: 'outputs/baseline-v1'
+  project_name: 'token_routing-v1'
+  run_name: 'token_routing-v1'
+  output_dir: 'outputs/token_routing-v1'
   log_interval: 100
