fix changes in yaml file, add two more hours

--- a/config/tr_config.yaml
+++ b/config/tr_config.yaml
@@ -20,7 +20,7 @@ data:
 # Training config
 training:
   num_epochs: 20
-  learning_rate: 3e-4
+  learning_rate: 0.0003
   weight_decay: 0.01
   grad_clip: 1.0
   warmup_steps: 1000
@@ -30,5 +30,5 @@ logging:
   use_wandb: true
   project_name: 'token_routing-v1'
   run_name: 'token_routing-v1'
-  output_dir: 'outputs/token_routing-v1'
+  output_dir: '/projectnb/cs523aw/students/waqar/outputs/token_routing-v1'
   log_interval: 100
